--- a/juridica.html
+++ b/juridica.html
@@ -101,7 +101,7 @@
                             </div>
 
                             <div class="md:col-span-2">
-                                <a href="principal.html" target="_blank">
+                                <a href="principal2.html" target="_blank">
                                     <button type="button"
                                         class="flex items-center justify-between w-full px-6 py-3 text-sm tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-lg hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50">
                                         <span>Ingresar</span>
