--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                                         Nombre
                                     </label>
 
-                                    <input type="text" id="FirstName" name="first_name" class=" border mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 drop-shadow-lg " />
+                                    <input type="text" id="FirstName" name="first_name" placeholder="Ingresa tu Nombre" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-white-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                                 </div>
 
                                 <div class="col-span-6 sm:col-span-3">
@@ -63,16 +63,16 @@
                                         Apellido
                                     </label>
 
-                                    <input type="text" id="LastName" name="last_name" class=" border mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm drop-shadow-lg" />
+                                    <input type="text" id="LastName" name="last_name" placeholder="Ingresa tus Apellidos" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-white-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                                 </div>
 
                                 <div class="col-span-6">
                                     <label for="Email" class="block text-sm font-medium text-gray-700"> Email </label>
 
-                                    <input type="email" id="Email" name="email" class="border mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm drop-shadow-lg" />
+                                    <input type="email" id="Email" name="email" placeholder="Ingresa tu correo" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-white-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                                 </div>
                                 <div class="col-span-6 ">
-                                    <textarea name="comentarios" id="comentarios" placeholder="Ingrese sus comentarios aquí" rows="5" cols="70" class="border drop-shadow-lg"></textarea>
+                                    <textarea name="comentarios" id="comentarios" placeholder="Que comentarios quieres dejarnos" rows="5" cols="70" class="border drop-shadow-lg"></textarea>
 
                                 </div>
                                 <div class="col-span-6 drop-shadow-lg">
