--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/AdministraPlus/imagenes/icono.ico">
 
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
