--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             <a rel="noopener noreferrer" href="#" _msttexthash="209586" _msthash="1169">Integrantes</a>
                         </li>
                         <li>
-                            <a rel="noopener noreferrer" href="#" _msttexthash="95589" _msthash="1170">Precios</a>
+                            <a rel="noopener noreferrer" href="Precios.html" _msttexthash="95589" _msthash="1170">Precios</a>
                         </li>
                         <li>
                             <a rel="noopener noreferrer" href="#" _msttexthash="22607" _msthash="1171">Preguntas mas frecuentes</a>
