Cambio en imágenes

--- a/Precios.html
+++ b/Precios.html
@@ -95,7 +95,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">Email Support</span>
+                                <span class="text-gray-600 capitalize">Soporte De Correo Electrónico</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
@@ -106,7 +106,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">User Management</span>
+                                <span class="text-gray-600 capitalize">Gestión De Usuarios</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
@@ -117,7 +117,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">Reports</span>
+                                <span class="text-gray-600 capitalize">Informes</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-gray-300 rounded-full p-1">
@@ -128,7 +128,6 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-400 capitalize">Unlimited Users</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-gray-300 rounded-full p-1">
@@ -201,7 +200,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">Email Support</span>
+                                <span class="text-gray-600 capitalize">Soporte De Correo Electrónico</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
@@ -212,7 +211,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">User Management</span>
+                                <span class="text-gray-600 capitalize">Gestión De Usuarios</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
@@ -223,19 +222,9 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">Reports</span>
+                                <span class="text-gray-600 capitalize">Informes</span>
                             </li>
-                            <li class="flex items-center space-x-2 px-8">
-                                <span class="bg-blue-500 rounded-full p-1">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 text-white"
-                                        viewBox="0 0 20 20" fill="currentColor">
-                                        <path fill-rule="evenodd"
-                                            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
-                                </span>
-                                <span class="text-gray-600 capitalize">Unlimited Users</span>
-                            </li>
+                            
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 text-white"
@@ -307,7 +296,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">Email Support</span>
+                                <span class="text-gray-600 capitalize">Soporte De Correo Electrónico</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
@@ -318,7 +307,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">User Management</span>
+                                <span class="text-gray-600 capitalize">Gestión De Usuarios</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
@@ -329,18 +318,11 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">Reports</span>
+                                <span class="text-gray-600 capitalize">Informes</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 text-white"
-                                        viewBox="0 0 20 20" fill="currentColor">
-                                        <path fill-rule="evenodd"
-                                            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">Unlimited Users</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
