--- a/principal2.html
+++ b/principal2.html
@@ -153,7 +153,7 @@
        <br>                     
         </form>
         <br>
-        <div>
+        
             <form action="" class="contenedor4">
                 <div>
                     <label class="text-gray-900">
@@ -180,13 +180,15 @@
                     </div>
                     <br>
                 <div>
+                    <form action="" class="boton">
+                        <button type="button" class="bg-blue-500 text-white px-4 py-2 rounded-md shadow-md" onclick="agregar()">Agregar</button>
+                    </form>
                     
-                    <button type="button" class="bg-blue-500 text-white px-4 py-2 rounded-md shadow-md" onclick="agregar()">Agregar</button>
                 </div>
             </div>
         </form>
     </main>
-
+<br>
     <footer class="px-4 divide-y dark:bg-black-500 dark:text-white-800">
         <div class="container flex flex-col justify-between py-10 mx-auto space-y-8 lg:flex-row lg:space-y-0">
             <div class="lg:w-1/3">
