aregle el footer y acordios del index, tambien agregar las ultimas modificaciones en el archivo de precios

--- a/Precios.html
+++ b/Precios.html
@@ -128,6 +128,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
+                                <span class="text-gray-400 capitalize">Exportación De Datos</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-gray-300 rounded-full p-1">
@@ -138,7 +139,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-400 capitalize">Data Export</span>
+                                <span class="text-gray-400 capitalize">Informes de la bolsa de valores</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-gray-300 rounded-full p-1">
@@ -149,18 +150,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-400 capitalize">Automated Workflows</span>
-                            </li>
-                            <li class="flex items-center space-x-2 px-8">
-                                <span class="bg-gray-300 rounded-full p-1">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 text-white"
-                                        viewBox="0 0 20 20" fill="currentColor">
-                                        <path fill-rule="evenodd"
-                                            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
-                                </span>
-                                <span class="text-gray-400 capitalize">API Access</span>
+                                <span class="text-gray-400 capitalize">Consejos de invercion en la BVC</span>
                             </li>
                         </ul>
                         <div class="flex items-center justify-center mt-6">
@@ -234,7 +224,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">Data Export</span>
+                                <span class="text-gray-600 capitalize">Exportación De Datos</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-gray-300 rounded-full p-1">
@@ -245,7 +235,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-400 capitalize">Automated Workflows</span>
+                                <span class="text-gray-400 capitalize">Informes de la bolsa de valores</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-gray-300 rounded-full p-1">
@@ -256,7 +246,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-400 capitalize">API Access</span>
+                                <span class="text-gray-400 capitalize">Consejos de invercion en la BVC</span>
                             </li>
                         </ul>
                         <div class="flex items-center justify-center mt-6">
@@ -322,7 +312,14 @@
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 text-white"
+                                        viewBox="0 0 20 20" fill="currentColor">
+                                        <path fill-rule="evenodd"
+                                            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                                            clip-rule="evenodd"></path>
+                                    </svg>
                                 </span>
+                                <span class="text-gray-600 capitalize">Exportación De Datos</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
@@ -333,7 +330,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">Data Export</span>
+                                <span class="text-gray-600 capitalize">Informes de la bolsa de valores</span>
                             </li>
                             <li class="flex items-center space-x-2 px-8">
                                 <span class="bg-blue-500 rounded-full p-1">
@@ -344,18 +341,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </span>
-                                <span class="text-gray-600 capitalize">Automated Workflows</span>
-                            </li>
-                            <li class="flex items-center space-x-2 px-8">
-                                <span class="bg-blue-500 rounded-full p-1">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 text-white"
-                                        viewBox="0 0 20 20" fill="currentColor">
-                                        <path fill-rule="evenodd"
-                                            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
-                                </span>
-                                <span class="text-gray-600 capitalize">API Access</span>
+                                <span class="text-gray-600 capitalize">Consejos de invercion en la BVC</span>
                             </li>
                         </ul>
                         <div class="flex items-center justify-center mt-6">
