se modifica el nombre de la página principal en la etiqueta title de Persona Natural y Persona jurídica

--- a/principal.html
+++ b/principal.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página principal - ADPlus</title>
+    <title>Persona Natural - ADPlus</title>
     <link rel="shortcut icon" href="/AdministraPlus/imagenes/icono.ico">
 
     <link rel="stylesheet" href="Css/style4.css">
