--- a/principal2.html
+++ b/principal2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página principal - ADPlus</title>
+    <title>Persona jurídica - ADPlus</title>
     <link rel="shortcut icon" href="/AdministraPlus/imagenes/icono.ico">
 
     <link rel="stylesheet" href="Css/Style5.css">
