--- a/juridica.html
+++ b/juridica.html
@@ -56,45 +56,45 @@
                             Bienvenido a ADPlus
                         </h1>
 
-                        <p class="mt-4 text-gray-500 dark:text-black-500">
+                        <p class="mt-4 text-gray-800 dark:text-black-800">
                             Vamos a configurarlo todo para que pueda verificar su cuenta empreasarial y comenzar a
                             configurar su perfil.
                         </p>
 
                         <form class="grid grid-cols-1 gap-6 mt-8 md:grid-cols-2">
                             <div>
-                                <label class="block mb-2 text-sm text-gray-600 dark:text-black-200">Razon social</label>
+                                <label class="block font-semibold mb-2 text-sm text-gray-900 dark:text-black-200">Razon social</label>
                                 <input type="text" placeholder="Ingresa la razon social"
                                     class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-white-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                             </div>
 
                             <div>
-                                <label class="block mb-2 text-sm text-gray-600 dark:text-black-200">NIT</label>
+                                <label class="block font-semibold mb-2 text-sm text-gray-900 dark:text-black-200">NIT</label>
                                 <input type="number" placeholder="Ingresa el NIT de la empresa"
                                     class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-white-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                             </div>
 
                             <div>
-                                <label class="block mb-2 text-sm text-gray-600 dark:text-black-200">Numero
+                                <label class="block font-semibold mb-2 text-sm text-gray-900 dark:text-black-200">Numero
                                     telfonico</label>
                                 <input type="text" placeholder="XXX-XX-XXXX-XXX"
                                     class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-white-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                             </div>
 
                             <div>
-                                <label class="block mb-2 text-sm text-gray-600 dark:text-black-200">Email</label>
+                                <label class="block font-semibold mb-2 text-sm text-gray-900 dark:text-black-200">Email</label>
                                 <input type="email" placeholder="johnsnow@ejemplo.com"
                                     class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-white-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                             </div>
 
                             <div>
-                                <label class="block mb-2 text-sm text-gray-600 dark:text-black-200">Contraseña</label>
+                                <label class="block font-semibold mb-2 text-sm text-gray-600 dark:text-black-200">Contraseña</label>
                                 <input type="password" placeholder="Ingrsa tu contraseña"
                                     class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-white-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                             </div>
 
                             <div>
-                                <label class="block mb-2 text-sm text-gray-600 dark:text-black-200">confirmar
+                                <label class="block font-semibold mb-2 text-sm text-gray-900 dark:text-black-200">confirmar
                                     Contraseña</label>
                                 <input type="password" placeholder="Confirma tu contraseña"
                                     class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-white-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
