Se crea el encarpetado MVC, y se modificn los nombres de los archivos html de persona natural, jurídica;

--- a/SingIn.html
+++ b/SingIn.html
@@ -29,6 +29,6 @@
             </div>
         </form>
     </div>
-    <script src="signin.js" defer></script>
+    <script src="./controllers/signin.js" defer></script>
 </body>
 </html>
