Se agregaron las conexeciones a persona natural y persona jurídica, ya que habían errores de conexión

--- a/SingIn.html
+++ b/SingIn.html
@@ -25,7 +25,7 @@
             <div class="extra-links text-center">
                 <a href="Signup.html" class="link text-blue-500 hover:underline">¿No tienes cuenta? Regístrate</a>
                 <br>
-                <a href="forgot-password.html" class="link text-blue-500 hover:underline">¿Olvidaste tu contraseña?</a>
+                <a href="./views/contraseniaOlvidada.html" class="link text-blue-500 hover:underline">¿Olvidaste tu contraseña?</a>
             </div>
         </form>
     </div>
