--- a/Singup.html
+++ b/Singup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="natural.html" class="card">
+    <a href="./views/natural.html" class="card">
       <img src="imagenes/persona.webp" alt="Persona Natural" class="card-img">
        <div class="card-content">
       <h2>Natural</h2>
@@ -15,7 +15,7 @@
   </a>
   </div>
   <div class="container">
-  <a href="juridica.html" class="card">
+  <a href="./views/juridica.html" class="card">
       <img src="imagenes/juridico.webp" alt="Persona Juridica" class="card-img">
        <div class="card-content">
       <h2>Juridica</h2>
