--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <nav>
           <ul>
             <li>
-              <a href="#" onclick="abrirInicioSesion(); return false;"
+              <a href="./SingIn.html" onclick="abrirInicioSesion(); return false;"
                 >Inicia sesión</a
               >
             </li>
