Se verifica la conexión porque hubo un error al momento de pasar al inicio de sesión y los registros de persona natural y jurídica

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <nav>
           <ul>
             <li>
-              <a href="./SingIn.html" onclick="abrirInicioSesion(); return false;"
+              <a href="./Singup.html" onclick="abrirInicioSesion(); return false;"
                 >Inicia sesión</a
               >
             </li>
