Se modifica el controller de signin.js

--- a/SingIn.html
+++ b/SingIn.html
@@ -29,6 +29,6 @@
             </div>
         </form>
     </div>
-    <script src="./controllers/signin.js" defer></script>
+    <script type="module" src="./controllers/signin.js" defer></script>
 </body>
 </html>
