Se crea el enlace para validar la persona jurídica en el controller

--- a/vistaPersonaJuridica.html
+++ b/vistaPersonaJuridica.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="operaciones2.js"></script>
+    
 
 
 
@@ -319,6 +319,7 @@
         <div class="py-6 text-sm text-center dark:text-gray-600" _msttexthash="973869" _msthash="1180">© 2024
             ADplus.com. Todos los derechos reservados.</div>
     </footer>
+    <script src="./logicaPersonaJuridica.js"></script>
 </body>
 
 </html>
