--- a/vistaPersonaNatural.html
+++ b/vistaPersonaNatural.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="operaciones.js" defer></script>
+    
 
 </head>
 
@@ -290,6 +290,7 @@
         <div class="py-6 text-sm text-center dark:text-gray-600" _msttexthash="973869" _msthash="1180">© 2024
             ADplus.com. Todos los derechos reservados.</div>
     </footer>
+    <script src="./logicaPersonaNatural.js" defer></script>
 </body>
 
 </html>
