Se crea el el html de informe que enruta a la página de power BI de la aplicación

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           </li>
           <li><a href="./views/contact.html">Contáctanos</a></li>
           <li><a href="./views/Quienes-somos.html">Quiénes somos</a></li>
+          <li ><a href="./views/informe.html">Informe PowerBI</a></li>
         </ul>
       </nav>
       <button id="toggleLanguageBtn">Change to English</button>
