Se hacen unas modificaciones en los <a> de las páginas, que no dirigían al inicio de la app

--- a/principal2.html
+++ b/principal2.html
@@ -22,7 +22,7 @@
         <div class="bg-gray-900">
             <div class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
                 <div class="relative flex items-center justify-between">
-                    <a href="/AdministraPlus/Index.html" aria-label="Company" title="Company" class="inline-flex items-center">
+                    <a href="/index.html" aria-label="Company" title="Company" class="inline-flex items-center">
                         <svg width="3rem" height="3rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-600 rounded-full" viewBox="0 0 24 24">
                             <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                         </svg>
