--- a/juridica.html
+++ b/juridica.html
@@ -16,7 +16,7 @@
         <div class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8">
             <a class="block text-teal-600" href="#">
                 <span class="sr-only">Home</span>
-                <a href="/AdministraPlus/index.html">
+                <a href="/index.html">
                     <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                         stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         class="w-10 h-10 text-white p-2 bg-blue-600 rounded-full" viewBox="0 0 24 24">
